=== 1.3.18
- Suppress user notifications during stub cleanup and log errors to DEBUG output
- Fixes issue where two MessageBox dialogs appeared in GUI mode when a signature was not found.

=== 1.3.17
- Modified `rake test` to no longer build stubs during test execution. Use `rake build_stub` when stub generation is necessary.
- New `rake build` task as a unified build entry point, delegating to `build_stub`.
- Updated GitHub Actions and internal scripts to use `rake build` instead of `rake build_stub`.
- Add full support for multibyte (UTF-8) names across executables, scripts, and resources. Requires Windows 10 version 1903 or later.
- Added UTF-8 manifest to stub.exe to enable UTF-8 support in ANSI API calls.
- Update Bundler from 2.5.10 to 2.5.23. This is the last Bundler version officially supporting Ruby 3.0.
- Added `bin/setup` and `bin/console` scripts for development (both Bash and Windows .bat versions).
- `bin/setup` now installs dependencies and builds stub executables automatically.
- Improved `spec.files` to explicitly include README, LICENSE, and CHANGELOG.
- Introduced a `Development` section in the README with setup instructions and Windows shell compatibility.
- Updated copyright year in README and LICENSE.

=== 1.3.16
- Support for Ruby 3.0 and above. Drop ruby 2.6 and 2.7 support.
- At startup, OCRAN no longer automatically removes directories that were previously deployed but couldn't be deleted. This change has been made to enhance security by preventing processes other than the startup process from manipulating temporary files created by them.
- The ability for the stub to launch any script during the unpacking of application files has been removed. This feature was not in use.
- The exit code from the Ruby application is now returned when the stub is terminated.
- The packed data no longer contains redundant directory information.
- Fixed errors in the --debug option.
- Upgraded LZMA decoder to version 22.01